  [ Jonas Meurer ]
  * Add 01_tries_fix.dpatch, makes the --tries commandline option work
    again. (closes: #414326, #412064)
  * Document the un_vol_id check script, remove the swap check script from
    documentation. The swap check indeed is rather useless, thanks to Frank
    Engler <bts.to.FrankEngler@spamgourmet.com>. The script itself is kept
    for compability issues. (closes: #406837)

 -- Jonas Meurer <mejo@debian.org>  Mon, 19 Mar 2007 17:21:04 +0100

cryptsetup (2:1.0.4+svn26-1) unstable; urgency=high

  [ Jonas Meurer ]
  * New upstream svn snapshot 1.0.4+svn26
    - contains a slightly modified patch by Rob Walker
      <rob@tenfoot.org.uk> to fix a sector size error. (closes: #403075)
    - fixes a LUKS header corruption on arm, which downgrades bug
      #403426 from critical to important.
    - prevents password retrying with I/O errors.
  * handle chainmode/essiv "plain" correctly in initramfs hook.
    Thanks to Leonard Norrgard. (closes: #402417)
  * remove 'rm -rf m4' from a clean target in debian/rules.
  * urgency=high to get this into etch.

  [ David Härdeman ]
  * Document the difference in default hash functions between the
    initramfs scripts and the plain cryptsetup binary. (closes: #398429)
  * Verify symlinks for source devices when initramfs is generated and
    correct if necessary. (closes: #405301)

 -- Jonas Meurer <mejo@debian.org>  Tue,  9 Jan 2007 21:53:06 +0100

cryptsetup (2:1.0.4+svn16-2) unstable; urgency=high

  [ David Härdeman ]
  * Add cbc to standard list of modules. Thanks to Michael Olbrich
    <michael.olbrich@gmx.net>. (closes: #401370)
  * Fix support for crypto-on-evms. Thanks to Enrico Gatto
    <cat@legnago.linux.it>. (closes: #402417)

  [ Jonas Meurer ]
  * urgency=high to get this into etch.

 -- Jonas Meurer <mejo@debian.org>  Thu, 14 Dec 2006 01:41:40 +0100

cryptsetup (2:1.0.4+svn16-1) unstable; urgency=medium

  [ David Härdeman ]
  * Support adding separate blockcipher modules to initramfs image